# desk-exec

./: Cargo.toml  README.md  build.rs
desk-exec/: Cargo.toml
desk-exec-bin/: Cargo.toml
desk-exec-bin/src/: args.rs  config.rs  main.rs
desk-exec/src/: lib.rs
desk-exec/tests/: integration.rs
package/archlinux/desk-exec/: PKGBUILD
package/archlinux/desk-exec-bin/: PKGBUILD
package/archlinux/desk-exec-git/: PKGBUILD
src/: config.rs  lib.rs  main.rs
tests/: integration.rs
