[package]
name = "desk-exec-bin"
description = "Execute programs defined in XDG desktop entries directly from the command line"
authors = ["Katherine Jamison <axertheaxe@proton.me>"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/axertheaxe/desk-exec"
license = "Unlicense"
readme = "../README.md"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "desk-exec"
path = "src/main.rs"

[dependencies.desk-exec]
path = "../desk-exec"
version = "0.2.x"

[dependencies]
anyhow = "1.0.*"
clap = { version = "4.5.*", features = ["derive"] }
freedesktop-desktop-entry = "0.6.*"
regex = "1.10.*"
serde = { version = "1.0.*", features = ["derive"] }
thiserror = "1.0.*"
toml = "0.8.*"
xdg = "2.5.*"

[build-dependencies]
clap = { version = "4.5.*", features = ["derive"] }
clap_complete = "4.5.*"
clap_complete_nushell = "4.5.*"
clap_mangen = "0.2.*"
