[package]
name = "desk-exec"
description = "Library to execute the programs defined in XDG desktop entries"
authors = ["Carter Jamison <axertheaxe@proton.me>"]
categories = ["os::unix-apis"]
repository = "https://github.com/axertheaxe/desk-exec"
license = "Unlicense"
readme = "README.md"
version = "0.2.0"
edition = "2021"

[dependencies]
freedesktop-desktop-entry = "0.6.x"
regex = "1.10.x"
thiserror = "1.0.x"
