[package]
name = "desk-exec"
description = "Library to execute the programs defined in XDG desktop entries"
authors = ["Katherine Jamison <axertheaxe@proton.me>"]
categories = ["os::unix-apis"]
keywords = ["desktop", "entries", "xdg", "execute"]
repository = "https://github.com/axertheaxe/desk-exec"
license = "Unlicense"
readme = "../README.md"
version = "0.2.1"
edition = "2021"

[dependencies]
freedesktop-desktop-entry = "0.6.*"
regex = "1.10.*"
thiserror = "1.0.*"
