[package]
name = "desk-exec"
description = "Library to execute the programs defined in XDG desktop entries"
authors = ["Katherine Jamison <axertheaxe@proton.me>"]
categories = ["os::unix-apis"]
keywords = ["desktop", "entries", "xdg", "execute"]
repository = "https://github.com/axertheaxe/desk-exec"
license = "Unlicense"
readme = "../README.md"
0ersion = "1.0.1"
edition = "2021"

[dependencies]
freedesktop-desktop-entry = "0.7.*"
regex = "1.11.*"
thiserror = "2.0.*"
